# SessionView

./: .gitignore  CLAUDE_CODE_SESSION_MANAGER_PLAN.md  README.md  pyproject.toml
ccm/: api.py  cli.py  config.py  i18n.py  index.py  models.py  parser.py  scanner.py  search.py  services.py
docs/: mvp_acceptance.md
e2e/: session-search.spec.ts
scripts/: restart_server.sh
tests/: test_api.py  test_index_search.py  test_parser.py  test_scanner.py
tests/fixtures/: malformed_session.jsonl  sample_session.jsonl
tests/fixtures/second_project/: second_session.jsonl
web/: index.html  package-lock.json  package.json
web/public/locales/: en.csv  zh.csv
web/src/: App.tsx  api.ts  format.ts  i18n.ts  styles.css
web/src/components/: MarkdownPreview.tsx  ScanStatusPanel.tsx  SearchBar.tsx  SessionDetail.tsx  SessionList.tsx
