[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-session-manager"
version = "0.1.0"
description = "Local Claude Code session scanner, indexer, and web UI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[project.scripts]
ccm = "ccm.cli:main"

[tool.setuptools.packages.find]
include = ["ccm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
